# docs/swagger.json
@@ -16,6 +16,151 @@
     "host": "petstore.swagger.io",
     "basePath": "/v1",
     "paths": {
+        "/admin/examination/all": {
+            "get": {
+                "description": "Retrieves all examination profiles",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Hybrid APIs"
+                ],
+                "summary": "Retrieves a list of all examination profile",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/models.ExamPreparation"
+                        }
+                    },
+                    "400": {
+                        "description": "Check Response Message",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseBody"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/examination/{profile}": {
+            "get": {
+                "description": "Retrieves all examination profiles",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Hybrid APIs"
+                ],
+                "summary": "Retrieves a list of all examination profile",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/models.ExamPreparation"
+                        }
+                    },
+                    "400": {
+                        "description": "Check Response Message",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseBody"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/student/abroad/all": {
+            "get": {
+                "description": "Retrieves all abroad student data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Hybrid APIs"
+                ],
+                "summary": "Retrieves a list of all abroad application students",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/models.StudyAbroad"
+                        }
+                    },
+                    "400": {
+                        "description": "Check Response Message",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseBody"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/student/all": {
+            "get": {
+                "description": "Retrieves all students data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Hybrid APIs"
+                ],
+                "summary": "Retrieves a list of all students",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Check Response Message",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseBody"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/tutor/all": {
+            "get": {
+                "description": "Retrieves all tutor data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Hybrid APIs"
+                ],
+                "summary": "Retrieves a list of all tutors",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Check Response Message",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseBody"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
                 "description": "Accept JSON data of User Login objects and returns valid response",
@@ -354,6 +499,46 @@
                 }
             }
         },
+        "/tutor/education/": {
+            "post": {
+                "description": "Accept JSON data of User educational registration objects and returns valid response",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authorization"
+                ],
+                "summary": "Handle setting up tutor educational status",
+                "parameters": [
+                    {
+                        "description": "The Tutor Educational Data",
+                        "name": "TutorEducationalData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TutorEducationalData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/models.TutorEducationalData"
+                        }
+                    },
+                    "400": {
+                        "description": "Check Response Message",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseBody"
+                        }
+                    }
+                }
+            }
+        },
         "/user/contactus/": {
             "post": {
                 "description": "Accept JSON data for contact details and message objects then returns valid response",
@@ -383,6 +568,46 @@
                         "description": "ok",
                         "schema": {
                             "$ref": "#/definitions/models.ContactUs"
+                        }
+                    },
+                    "400": {
+                        "description": "Check Response Message",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseBody"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/review/": {
+            "post": {
+                "description": "Accept JSON data for customer review and message objects then returns valid response",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Hybrid APIs"
+                ],
+                "summary": "Handle sending customer review",
+                "parameters": [
+                    {
+                        "description": "The Review Data",
+                        "name": "Review",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Review"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/models.Review"
                         }
                     },
                     "400": {
@@ -479,11 +704,20 @@
         "models.ContactUs": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "first_name": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "last_name": {
                     "type": "string"
@@ -495,6 +729,9 @@
                     "type": "string"
                 },
                 "subject": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -520,7 +757,7 @@
                 "exam_profile": {
                     "type": "string"
                 },
-                "ezam_status": {
+                "exam_status": {
                     "type": "string"
                 },
                 "id": {
@@ -606,6 +843,32 @@
                 }
             }
         },
+        "models.Review": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "review": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "models.StudentCurriculum": {
             "type": "object",
             "properties": {
@@ -632,6 +895,9 @@
                 "course": {
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
                 "degree": {
                     "type": "string"
                 },
@@ -639,6 +905,9 @@
                     "type": "string"
                 },
                 "degree_prgramme": {
+                    "type": "string"
+                },
+                "deleted_at": {
                     "type": "string"
                 },
                 "dob": {
@@ -671,6 +940,9 @@
                 "high_school": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "last_name": {
                     "type": "string"
                 },
@@ -687,6 +959,9 @@
                     "type": "string"
                 },
                 "university_name": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "year_of_admission": {
@@ -734,6 +1009,108 @@
                 }
             }
         },
+        "models.TutorDegree": {
+            "type": "object",
+            "properties": {
+                "college": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "degree": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "major": {
+                    "type": "string"
+                },
+                "tutor_id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "year": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.TutorEducationalData": {
+            "type": "object",
+            "properties": {
+                "certified_teacher": {
+                    "type": "boolean"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "educational_degree": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TutorDegree"
+                    }
+                },
+                "schedule": {
+                    "$ref": "#/definitions/models.TutorSchedule"
+                },
+                "subject_speciality": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "tutor_id": {
+                    "type": "string"
+                },
+                "work_experience": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TutorEmployment"
+                    }
+                }
+            }
+        },
+        "models.TutorEmployment": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "date_of_employment": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "employer": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "job_industry": {
+                    "type": "string"
+                },
+                "job_title": {
+                    "type": "string"
+                },
+                "time_agreement": {
+                    "type": "string"
+                },
+                "tutor_id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "models.TutorRegistration": {
             "type": "object",
             "properties": {
@@ -778,6 +1155,67 @@
                 }
             }
         },
+        "models.TutorSchedule": {
+            "type": "object",
+            "properties": {
+                "hours": {
+                    "type": "string"
+                },
+                "weekdays": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "weekend_hours": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "weekends": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "user_type": {
+                    "type": "string"
+                }
+            }
+        },
         "models.UserData": {
             "type": "object",
             "properties": {
@@ -818,7 +1256,19 @@
         "models.VerifyUser": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "verification_otp": {
